plugins {
    id 'java'
    id 'application'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.jmeter:ApacheJMeter_core:5.6.2'
    implementation 'org.apache.jmeter:ApacheJMeter_http:5.6.2'
    implementation 'org.slf4j:slf4j-simple:2.0.7'
    implementation 'com.thoughtworks.xstream:xstream:1.4.20'
}

application {
    mainClass = 'com.example.jmetertest.JMeterTest'
    applicationDefaultJvmArgs = [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}